# xacc-vqe-fcidump

./: .gitmodules  CMakeLists.txt  README.md
fcidump/: CMakeLists.txt  FCIDumpPreprocessor.cpp
fcidump/tests/: FCIDumpPreprocessorTester.cpp
python/: CMakeLists.txt  xacc-vqe-fcidump.py
